syntax = "proto3";

package com.wallet.demo.clustering.grpc.admin;

import "scalapb/scalapb.proto";
import "google/protobuf/wrappers.proto";

option (scalapb.options) = {
  scope: FILE
  package_name: "com.wallet.demo.clustering.grpc.admin"
  flat_package: true
  single_file: true
  java_conversions: false
  lenses: true
  getters: true
  retain_source_code_info: false
  no_default_values_in_constructor: false
  preserve_unknown_fields: false
  enum_value_naming: CAMEL_CASE
  enum_strip_prefix: false
//   scala3_sources: true
};

service ClusteringWalletService {
    rpc createWallet(RequestId) returns (Response) {}
    rpc deleteWallet(RequestId) returns (Response) {}
    rpc addCredit (CreditRequest) returns (Response) {}
    rpc addDebit(DebitRequest) returns (Response) {}
    rpc getBalance(RequestId) returns (BalanceResponse) {}
}

message CreditRequest{
    string id = 1;
    int32 amount = 2;
}

message DebitRequest{
    string id = 1;
    int32 amount = 2;
}

message Request{
}

message RequestId{
  google.protobuf.StringValue id = 1
//    [(scalapb.field).no_box = true, (scalapb.field).required = true]
   ;
}

message Response{
  google.protobuf.StringValue message = 1 [(scalapb.field).no_box = true, (scalapb.field).required = true];
}

message BalanceResponse{
  int64 balance = 1;
}

message BadRequestError {
  string code = 1;
  string title = 2;
  string description = 3;
}

message UnauthorizedError {
  string code = 1;
  string title = 2;
  string description = 3;
}

message ForbiddenError {
  string code = 1;
  string title = 2;
  string description = 3;
}

message NotFoundError {
  string code = 1;
  string title = 2;
  string description = 3;
}

message TooManyRequestsError {
  string code = 1;
  string title = 2;
  string description = 3;
}

message ServiceUnavailableError {
  string code = 1;
  string title = 2;
  string description = 3;
}

message GatewayTimeoutError {
  string code = 1;
  string title = 2;
  string description = 3;
}

message InternalServerError {
  string code = 1;
  string title = 2;
  string description = 3;
}