syntax = "proto3";

package com.wallet.demo.grpc.admin;

import "scalapb/scalapb.proto";
import "google/protobuf/wrappers.proto";

option (scalapb.options) = {
  scope: FILE
  package_name: "com.wallet.demo.grpc.admin"
  flat_package: true
  single_file: true
  java_conversions: false
  lenses: true
  getters: true
  retain_source_code_info: false
  no_default_values_in_constructor: false
  preserve_unknown_fields: false
  enum_value_naming: CAMEL_CASE
  enum_strip_prefix: false
  scala3_sources: true
};

service WalletService {
    rpc addCredit (CreditRequest) returns (Response) {}
    rpc addDebit(DebitRequest) returns (Response) {}
    rpc getBalance(Request) returns (BalanceResponse) {}
}

message CreditRequest{
    int32 amount = 1;
}

message DebitRequest{
    int32 amount = 1;
}

message Request{
}

message Response{
  google.protobuf.StringValue message = 1 [(scalapb.field).no_box = true, (scalapb.field).required = true];
}

message BalanceResponse{
    int64 balance = 1;
}
